--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -14,17 +14,6 @@
     align-items: center;
     padding: 16px;
 
-    mat-form-field {
-      ::ng-deep {
-        .mat-form-field-wrapper {
-          padding: 0;
-        }
-      }
-
-      flex: 1;
-      margin-left: 16px;
-    }
-
     .gap {
       flex: 1;
     }
@@ -32,5 +21,31 @@
 
   .table-section {
     padding: 16px;
+  }
+
+  .criteria-section {
+    display: flex;
+    align-items: center;
+    padding-left: 16px;
+    padding-right: 16px;
+
+    button {
+      margin: 8px;
+    }
+
+    .gap2 {
+      flex: 1;
+    }
+  }
+
+  mat-form-field {
+    ::ng-deep {
+      .mat-form-field-wrapper {
+        padding: 0;
+      }
+    }
+
+    flex: 1;
+    margin-left: 16px;
   }
 }
